# swan

./: .gitignore  .rc  CMakeLists.txt  README.md  clean_cmake.bat  commands.txt  compile_debug.bat  compile_imgui_debug.bat  compile_imgui_release.bat  compile_release.bat  compile_tests_debug.bat  create_files.py  precompile_debug.bat  swan.natvis
src/: all_in_one.cc  all_in_one.cpp  analytics.cpp  bulk_rename.cpp  bulk_rename_logic.cpp  bulk_rename_popup.cpp  bulk_rnm.cpp  bulk_rnm_mdl.cpp  common.cpp  common.hpp  common_fns.hpp  common_functions.hpp  cwd_autocomplete.cpp  data_types.hpp  debug_log.cpp  debug_log_window.cpp  drop_target.cpp  edit_pin_mdl.cpp  error_mdl.cpp  error_popup.cpp  explorer.cpp  explorer_drop_source.cpp  explorer_drop_source.hpp  explorer_file_op_progress_sink.cpp  explorer_window.cpp  fa_icons.cpp  file_operations.cpp  file_ops.cpp  file_ops_window.cpp  finder.cpp  focused_window.cpp  focused_wndw.cpp  icon_browser.cpp  icon_glyphs.cpp  icon_library.cpp  icons.cpp  imgui_dependent_functions.cpp  imgui_dependent_functions.hpp  imgui_ext.cpp  imgui_ext.hpp  (+61 more)
src/binary/: CascadiaMonoPL_ttf.h  FontAwesome5_Regular_400_ttf.h  FontAwesome5_Solid_900_ttf.h  RobotoMono_Regular_ttf.h  binary_file_to_cpp_array.py  codicon_ttf.h  lucide_ttf.h  swan_png.h
src/imgui/: codicons.h  font_FontAwesome5.h  font_awesome.h  font_codicon.h  font_lucide.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_impl_glfw.cpp  imgui_internal.h  imgui_widgets.cpp  imspinner.h
src/libs/: ntest.cpp  ntest.hpp  on_scope_exit_2.hpp  stb_image.cpp  stbi_image.cpp  thread_pool.hpp
